--- a/index.html
+++ b/index.html
@@ -21,25 +21,25 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">Home</a>
+                            <a class="nav-link" aria-current="page" href="#home">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
+                            <a class="nav-link" href="#about">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Services</a>
+                            <a class="nav-link" href="#services">Services</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Skills</a>
+                            <a class="nav-link" href="#skills">Skills</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Portfolio</a>
+                            <a class="nav-link" href="#portfolio">Portfolio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Samples</a>
+                            <a class="nav-link" href="#sample">Samples</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
+                            <a class="nav-link" href="#footer-section">Contact</a>
                         </li>
                 </div>
             </div>
@@ -171,7 +171,7 @@
             <h1 class="text-center ">Skills Sets</h1>
             <div class="container">
                 <div class="logos">
-                    <div class="logo"><img src="/icons/animation (1).png" alt=""></div>
+                    <div class="logo"><img src="" alt=""></div>
                     <div class="logo"><img src="" alt=""></div>
                     <div class="logo"><img src="" alt=""></div>
                     <div class="logo"><img src="" alt=""></div>
