--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
                 </div>
             </div>
         </section>
+        <!-- portfolio section end -->
         <!-- sample section start -->
         <section id="sample" class="sample-sec p-absolute">
             <h1 class="text-center text-white pt-5" data-aos="fade-up" >Samples</h1>
@@ -240,6 +241,7 @@
                 </div>
             </div>
         </section>
+        <!-- sample section end -->
     </main>
    
     <!-- footer section start -->
@@ -277,6 +279,7 @@
          copyright © by lily chakma
         </div>
     </footer>
+    <!-- footer section end -->
     <script src="/bootstrap/js/bootstrap.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="/bootstrap/js/app.js"></script>
