--- a/index.html
+++ b/index.html
@@ -54,6 +54,18 @@
                 </div>
                </div>
             </div>
+            <div class="bubble">
+                <img src="/images/vlur-circle2.png" alt="">
+                <img src="/images/vlur-circle2.png" alt="">
+                <img src="/images/vlur-circle2.png" alt="">
+                <img src="/images/vlur-circle2.png" alt="">
+                <img src="/images/vlur-circle2.png" alt="">
+                <img src="/images/vlur-circle2.png" alt="">
+                <img src="/images/vlur-circle2.png" alt="">
+                <img src="/images/vlur-circle2.png" alt="">
+                <img src="/images/vlur-circle2.png" alt="">
+                <img src="/images/vlur-circle2.png" alt="">
+              </div>
         </section>
         <!-- home section end -->
         <!-- about section start -->
