--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         </section>
         <!-- services section end -->
         <!-- skills section start -->
-        <section id="skills">
+        <section id="skills" class="skills-sec">
             <h1 class="text-center ">Skills Sets</h1>
             <div class="container">
                 <div class="logos">
@@ -225,35 +225,36 @@
             </div>
         </section>
         <!-- portfolio section end -->
-        <!-- sample section start -->
-        <section id="sample" class="sample-sec p-absolute">
-            <h1 class="text-center text-white pt-5" data-aos="fade-up" >Samples</h1>
-            <div class="container mt-5">
-                <div class="row">
-                    <div class="project col-lg-4 col-md-6 col-sm-12" data-aos="fade-up">
-                        <img class="img-fluid w-100" src="/images/104. Hot-tea-cup.jpg" alt="">
-                    </div>
-                    <div class="project col-lg-4 col-md-6 col-sm-12" data-aos="fade-up">
-                        <img class="img-fluid w-100" src="/images/104. Image cut.jpg" alt="">
-                    </div>
-                    <div class="project col-lg-4 col-md-6 col-sm-12s pb-5" data-aos="fade-up">
-                        <img class="img-fluid w-100" src="/images/104. mask-baby.jpg" alt="" >
+        <!-- previous section start -->
+        <section id="sample" class="sample-sec">
+            <h1 class="text-center text-white pt-5">My Previous Works</h1>
+            <div class="container previous-work d-grid pb-5 pt-5">
+              <div class="card2" data-tilt="" style="width: 18rem;">
+                    <img src="/images/104. mask-baby.jpg" class="card-img-top" alt="..." >
+                    <div class="card-body">
+                      <h5 class="card-title text-center mt-2 text-white">Graphics Design</h5>
+                      <p class="card-text text-center p-3 text-white">I have done web design as well as graphics design. Locally I have worked as a graphic designer in a few companies and have been able to produce good output.
+                    </p>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="project col-lg-4 col-md-6 col-sm-12s pb-5" data-aos="fade-up">
-                        <img class="img-fluid w-100" src="/images/104. Transfarent.jpg" alt="">
+                <div class="card2" data-tilt="" style="width: 18rem;">
+                    <img src="/images/Video-editing-software.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title text-center mt-2 text-white">Video Editing</h5>
+                      <p class="card-text text-center p-3 text-white">I have done web design as well as graphics design. Locally I have worked as a graphic designer in a few companies and have been able to produce good output.
+                    </p>
                     </div>
-                    <div class="project col-lg-4 col-md-6 col-sm-12s pb-5" data-aos="fade-up">
-                        <img class="img-fluid w-100" src="/images/cut-strawberry.jpg" alt="" >
-                    </div>
-                    <div class="project col-lg-4 col-md-6 col-sm-12s pb-5" data-aos="fade-up">
-                        <img class="img-fluid w-100" src="/images/lemon-juice.jpg" alt="" >
+                </div>
+                <div class="card2" data-tilt="" style="width: 18rem;">
+                    <img src="/portfolio/Capture3(3).PNG" class="card-img-top" alt="..." style="height: 13vw;">
+                    <div class="card-body">
+                      <h5 class="card-title text-center mt-2 text-white">Web Design</h5>
+                      <p class="card-text text-center p-3 text-white">I have done web design as well as graphics design. Locally I have worked as a graphic designer in a few companies and have been able to produce good output.
+                        </p>
                     </div>
                 </div>
             </div>
         </section>
-        <!-- sample section end -->
     </main>
    
     <!-- footer section start -->
@@ -295,5 +296,6 @@
     <script src="/bootstrap/js/bootstrap.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="/bootstrap/js/app.js"></script>
+    <script src="/vanilla-tilt.js"></script>
 </body>
 </html>
