--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 col-md-6 col-sm-12" data-aos="fade-up">
-                        <img src="/images/lily-half.png" alt="">
+                        <img src="/images/lily2-removebg-preview.png" alt="">
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12" data-aos="fade-up">
                         <div class="about" data-aos="fade-up">
@@ -101,8 +101,8 @@
                                 <button  class="button1">Hover me</button>
                             </div>
                             <div class="back">
-                                <h3 class="text-center text-white">Graphics Design</h3>
-                                <p class="text-center text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde, perferendis. Blanditiis pariatur dolor dicta magni!</p>
+                                <h3 class="text-center text-white">Web Design</h3>
+                                <p class="text-center text-white">I am a web designer. I have done web design work locally for three years. I have completed several web design projects with great success.</p>
                             </div>
                         </div>
                     </div>
@@ -114,8 +114,8 @@
                                     <button  class="button1">Hover me</button>
                                 </div>
                                 <div class="back">
-                                    <h3 class="text-center text-white">Graphics Design</h3>
-                                    <p class="text-center text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde, perferendis. Blanditiis pariatur dolor dicta magni!</p>
+                                    <h3 class="text-center text-white">Video Editing</h3>
+                                    <p class="text-center text-white">I also have good experience in video editing sector. As in other sectors, I have been quite successful here.</p>
                                 </div>
                             </div>
                         </div>
@@ -128,7 +128,7 @@
                                 </div>
                                 <div class="back-2">
                                     <h3 class="text-center text-white">Graphics Design</h3>
-                                    <p class="text-center text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde, perferendis. Blanditiis pariatur dolor dicta magni!</p>
+                                    <p class="text-center text-white">Locally I have worked as a graphic designer in a few companies and have been able to produce good output.</p>
                                 </div>
                             </div>
                         </div>
@@ -142,8 +142,8 @@
                                     <button  class="button1">Hover me</button>
                                 </div>
                                 <div class="back-3">
-                                    <h3 class="text-center text-white">Graphics Design</h3>
-                                    <p class="text-center text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde, perferendis. Blanditiis pariatur dolor dicta magni!</p>
+                                    <h3 class="text-center text-white">Photography</h3>
+                                    <p class="text-center text-white">I also have good knowledge of photography and I have demonstrated quite a lot of skills in this sector.</p>
                                 </div>
                             </div>
                         </div>
@@ -155,8 +155,8 @@
                                     <button  class="button1">Hover me</button>
                                 </div>
                                 <div class="back-4">
-                                    <h3 class="text-center text-white">Graphics Design</h3>
-                                    <p class="text-center text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde, perferendis. Blanditiis pariatur dolor dicta magni!</p>
+                                    <h3 class="text-center text-white">Animation</h3>
+                                    <p class="text-center text-white">I have good experience in animation sector. Click on the link below to view work samples.</p>
                                 </div>
                             </div>
                         </div>
@@ -168,8 +168,8 @@
                                     <button class="button1">Hover me</button>
                                 </div>
                                 <div class="back-5">
-                                    <h3 class="text-center text-dark">Graphics Design</h3>
-                                    <p class="text-center text-dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde, perferendis. Blanditiis pariatur dolor dicta magni!</p>
+                                    <h3 class="text-center text-dark">Audio Editing</h3>
+                                    <p class="text-center text-dark">Apart from video editing I also do audio editing. I have successfully completed several audio editing projects.</p>
                                 </div>
                             </div>
                         </div>
@@ -179,19 +179,18 @@
         </section>
         <!-- services section end -->
         <!-- skills section start -->
-        <section id="skills" class="skills-sec">
+        <section id="skills" class="">
             <h1 class="text-center ">Skills Sets</h1>
             <div class="container">
                 <div class="logos">
-                    <div class="logo"><img src="" alt=""></div>
-                    <div class="logo"><img src="" alt=""></div>
-                    <div class="logo"><img src="" alt=""></div>
-                    <div class="logo"><img src="" alt=""></div>
-                    <div class="logo"><img src="" alt=""></div>
-                    <div class="logo"><img src="" alt=""></div>
-                    <div class="logo"><img src="" alt=""></div>
-                    <div class="logo"><img src="" alt=""></div>
-                    <div class="logo"><img src="" alt=""></div>
+                    <div class="logo"><img class="img-fluid" src="/logos/adobe-illustrator__1_-removebg-preview (1).png" alt="" style="width: 21vw;"></div>
+                    <div class="logo2"><img class="img-fluid " src="/logos/animation-1 (1).png" alt="" style="width: 20vw;"></div>
+                    <div class="logo"><img class="img-fluid "  src="/logos/audition__1_-removebg-preview.png" alt="" style="width: 40vw;"></div>
+                    <div class="logo"><img class="img-fluid "  src="/logos/css3__1_-removebg-preview.png" alt="" style="width: 23vw;"></div>
+                    <div class="logo"><img class="img-fluid "  src="/logos/html-removebg-preview.png" alt="" style="width: 23vw;"></div>
+                    <div class="logo"><img class="img-fluid"  src="/logos/js-removebg-preview.png" alt="" style="width: 20vw;"></div>
+                    <div class="logo"><img class="img-fluid "  src="/logos/photoshop__1_-removebg-preview.png" alt="" style="width: 42vw;"></div>
+                    <div class="logo2"><img class="img-fluid "  src="/logos/premire pro (1).png" alt="" style="width: 20vw;"></div>
                 </div>
             </div>
         </section>
@@ -230,11 +229,11 @@
             <h1 class="text-center text-white pt-5">My Previous Works</h1>
             <div class="container previous-work d-grid pb-5 pt-5">
               <div class="card2" data-tilt="" style="width: 18rem;">
-                    <img src="/images/104. mask-baby.jpg" class="card-img-top" alt="..." >
+                    <img src="/images/104. mask-baby.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title text-center mt-2 text-white">Graphics Design</h5>
                       <p class="card-text text-center p-3 text-white">I have done web design as well as graphics design. Locally I have worked as a graphic designer in a few companies and have been able to produce good output.
-                    </p>
+                        </p>
                     </div>
                 </div>
                 <div class="card2" data-tilt="" style="width: 18rem;">
@@ -246,7 +245,7 @@
                     </div>
                 </div>
                 <div class="card2" data-tilt="" style="width: 18rem;">
-                    <img src="/portfolio/Capture3(3).PNG" class="card-img-top" alt="..." style="height: 13vw;">
+                    <img src="/portfolio/Capture3(3).PNG" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title text-center mt-2 text-white">Web Design</h5>
                       <p class="card-text text-center p-3 text-white">I have done web design as well as graphics design. Locally I have worked as a graphic designer in a few companies and have been able to produce good output.
