--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>104 | Lily Chakma</title>
     <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/style/style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="shortcut icon" href="/logo/104.logo-rgb-final.png" type="image/x-icon">
 </head>
 <body>
     <!-- main section start -->
@@ -179,18 +180,14 @@
         </section>
         <!-- services section end -->
         <!-- skills section start -->
-        <section id="skills" class="">
-            <h1 class="text-center ">Skills Sets</h1>
+        <section id="skills" class="skills-section">
+            <h1 class="text-center text-white">Skills</h1>
             <div class="container">
-                <div class="logos">
-                    <div class="logo"><img class="img-fluid" src="/logos/adobe-illustrator__1_-removebg-preview (1).png" alt="" style="width: 21vw;"></div>
-                    <div class="logo2"><img class="img-fluid " src="/logos/animation-1 (1).png" alt="" style="width: 20vw;"></div>
-                    <div class="logo"><img class="img-fluid "  src="/logos/audition__1_-removebg-preview.png" alt="" style="width: 40vw;"></div>
-                    <div class="logo"><img class="img-fluid "  src="/logos/css3__1_-removebg-preview.png" alt="" style="width: 23vw;"></div>
-                    <div class="logo"><img class="img-fluid "  src="/logos/html-removebg-preview.png" alt="" style="width: 23vw;"></div>
-                    <div class="logo"><img class="img-fluid"  src="/logos/js-removebg-preview.png" alt="" style="width: 20vw;"></div>
-                    <div class="logo"><img class="img-fluid "  src="/logos/photoshop__1_-removebg-preview.png" alt="" style="width: 42vw;"></div>
-                    <div class="logo2"><img class="img-fluid "  src="/logos/premire pro (1).png" alt="" style="width: 20vw;"></div>
+                <div class="row">
+                    <div class="logo col-lg-3 col-md-3 col-sm-6"><img class="img-fluid" src="/logos/adobe-illustrator__1_-removebg-preview (1).png" alt="" style="width: 11vw;"></div>
+                    <div class="logo col-lg-3 col-md-3 col-sm-6"><img class="img-fluid"  src="/logos/js-removebg-preview.png" alt="" style="width: 12vw;"></div>
+                    <div class="logo col-lg-3 col-md-3 col-sm-6"><img class="img-fluid "  src="/logos/premire pro (1).png" alt="" style="width: 11vw;"></div>
+                    <div class="logo col-lg-3 col-md-3 col-sm-6"><img class="img-fluid " src="/logos/animation-1 (1).png" alt="" style="width: 11vw;"></div>
                 </div>
             </div>
         </section>
