--- a/index.html
+++ b/index.html
@@ -251,6 +251,34 @@
                 </div>
             </div>
         </section>
+        <!-- contact section start -->
+        <section id="contact" class="contact-section">
+            <div class="color"></div>
+            <div class="color"></div>
+            <div class="color"></div>
+            <div class="box">
+                <div class="container-form">
+                    <div class="form">
+                        <div class="mb-3">
+                            <h4 class="text-center">Contact Form</h4>
+                            <label for="exampleFormControlInput1" class="form-label"></label>
+                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Enter Your name">
+                        </div>
+                        <div class="mb-3">
+                            <label for="exampleFormControlInput1" class="form-label"></label>
+                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Enter Your Email">
+                        </div>
+                        <div class="mb-3">
+                            <label for="exampleFormControlTextarea1" class="form-label"></label>
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Enter Your massages"></textarea>
+                        </div>
+                        <div class="col-auto">
+                            <button type="submit" class="btn btn-info mb-3">Send</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
    
     <!-- footer section start -->
