--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                             <a class="nav-link" href="#sample">Samples</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#footer-section">Contact</a>
+                            <a class="nav-link" href="#contact">Contact</a>
                         </li>
                 </div>
             </div>
@@ -180,7 +180,7 @@
         </section>
         <!-- services section end -->
         <!-- skills section start -->
-        <section id="skills" class="skills-section">
+        <!-- <section id="skills" class="skills-section">
             <h1 class="text-center text-white">Skills</h1>
             <div class="container">
                 <div class="row">
@@ -190,31 +190,31 @@
                     <div class="logo col-lg-3 col-md-3 col-sm-6"><img class="img-fluid " src="/logos/animation-1 (1).png" alt="" style="width: 11vw;"></div>
                 </div>
             </div>
-        </section>
+        </section> -->
         <!-- skills section end -->
         <!-- portfolio section start -->
         <section id="portfolio" class="portfolio-sec pt-5">
             <h1 class="text-center text-white">Portfolio</h1>
             <div class="container mt-5">
-                <div class="row">
-                    <div class="projects col-lg-4 col-md-6 col-sm-12" data-aos="fade-up" >
+                <div class="row"  data-aos="fade-up">
+                    <div class="projects col-lg-4 col-md-6 col-sm-12" >
                         <img class="img-fluid w-100" src="/portfolio/Capture1(2).PNG" alt="">
                     </div>
-                    <div class="projects col-lg-4 col-md-6 col-sm-12" data-aos="fade-up">
+                    <div class="projects col-lg-4 col-md-6 col-sm-12" >
                         <img class="img-fluid w-100" src="/portfolio/Capture2(2).PNG" alt="" >
                     </div>
-                    <div class="projects col-lg-4 col-md-6 col-sm-12 pb-5" data-aos="fade-up">
+                    <div class="projects col-lg-4 col-md-6 col-sm-12 pb-5">
                         <img class="img-fluid w-100" src="/portfolio/Capture3(3).PNG" alt="" >
                     </div>
                 </div>
-                <div class="row">
-                    <div class="project col-lg-4 col-md-6 col-sm-12" data-aos="fade-up">
+                <div class="row" data-aos="fade-up">
+                    <div class="project col-lg-4 col-md-6 col-sm-12">
                         <img class="img-fluid w-100" src="/images/writing on face2.jpg" alt="">
                     </div>
-                    <div class="project col-lg-4 col-md-6 col-sm-12" data-aos="fade-up">
+                    <div class="project col-lg-4 col-md-6 col-sm-12">
                         <img class="img-fluid w-100" src="/images/fish in water.jpg" alt="" >
                     </div>
-                    <div class="project col-lg-4 col-md-6 col-sm-12" data-aos="fade-up">
+                    <div class="project col-lg-4 col-md-6 col-sm-12">
                         <img class="img-fluid w-100" src="/images/circle.jpg" alt="">
                     </div>
                 </div>
@@ -225,7 +225,7 @@
         <section id="sample" class="sample-sec">
             <h1 class="text-center text-white pt-5">My Previous Works</h1>
             <div class="container previous-work d-grid pb-5 pt-5">
-              <div class="card2" data-tilt="" style="width: 18rem;">
+              <div class="card2" data-tilt="" style="width: 18rem;" data-aos="fade-up">
                     <img src="/images/104. mask-baby.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title text-center mt-2 text-white">Graphics Design</h5>
@@ -233,7 +233,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="card2" data-tilt="" style="width: 18rem;">
+                <div class="card2" data-tilt="" style="width: 18rem;" data-aos="fade-up">
                     <img src="/images/Video-editing-software.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title text-center mt-2 text-white">Video Editing</h5>
@@ -241,7 +241,7 @@
                     </p>
                     </div>
                 </div>
-                <div class="card2" data-tilt="" style="width: 18rem;">
+                <div class="card2" data-tilt="" style="width: 18rem;" data-aos="fade-up">
                     <img src="/portfolio/Capture3(3).PNG" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title text-center mt-2 text-white">Web Design</h5>
