--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
         </nav>
         <!-- home section start -->
-        <section id="home" class="first-section p-absolute">
+        <section id="home" class="first-section">
             <div class="container text-center">
                <div class="row">
                 <div class="welcome col-lg-12 col-md-12 col-sm-12">
@@ -55,7 +55,7 @@
                 </div>
                </div>
             </div>
-            <div class="bubble">
+            <!-- <div class="bubble">
                 <img src="/images/vlur-circle2.png" alt="">
                 <img src="/images/vlur-circle2.png" alt="">
                 <img src="/images/vlur-circle2.png" alt="">
@@ -66,11 +66,11 @@
                 <img src="/images/vlur-circle2.png" alt="">
                 <img src="/images/vlur-circle2.png" alt="">
                 <img src="/images/vlur-circle2.png" alt="">
-              </div>
+              </div> -->
         </section>
         <!-- home section end -->
         <!-- about section start -->
-        <section id="about" class="about-section p-absolute">
+        <section id="about" class="about-section">
             <h2 class="text-center text-white" data-aos="fade-up">About</h2>
             <div class="container">
                 <div class="row">
@@ -91,7 +91,7 @@
             </div>
         </section>
         <!-- about section end -->
-        <section id="services" class="services-sec p-absolute pt-5">
+        <section id="services" class="services-sec pt-5">
             <h1 class="text-center text-white serv" data-aos="fade-up">Services</h1>
             <div class="container mx-auto ">
                 <div class="row ms-4">
@@ -196,7 +196,7 @@
         <section id="portfolio" class="portfolio-sec pt-5">
             <h1 class="text-center text-white">Portfolio</h1>
             <div class="container mt-5">
-                <div class="row"  data-aos="fade-up">
+                <div class="row project-row"  data-aos="fade-up">
                     <div class="projects col-lg-4 col-md-6 col-sm-12" >
                         <img class="img-fluid w-100" src="/portfolio/Capture1(2).PNG" alt="">
                     </div>
@@ -207,7 +207,7 @@
                         <img class="img-fluid w-100" src="/portfolio/Capture3(3).PNG" alt="" >
                     </div>
                 </div>
-                <div class="row" data-aos="fade-up">
+                <div class="row project-row" data-aos="fade-up">
                     <div class="project col-lg-4 col-md-6 col-sm-12">
                         <img class="img-fluid w-100" src="/images/writing on face2.jpg" alt="">
                     </div>
@@ -256,7 +256,6 @@
             <div class="color"></div>
             <div class="color"></div>
             <div class="color"></div>
-            <div class="box">
                 <div class="container-form">
                     <div class="form">
                         <div class="mb-3">
@@ -277,7 +276,6 @@
                         </div>
                     </div>
                 </div>
-            </div>
         </section>
     </main>
    
