--- a/index.html
+++ b/index.html
@@ -55,18 +55,6 @@
                 </div>
                </div>
             </div>
-            <!-- <div class="bubble">
-                <img src="/images/vlur-circle2.png" alt="">
-                <img src="/images/vlur-circle2.png" alt="">
-                <img src="/images/vlur-circle2.png" alt="">
-                <img src="/images/vlur-circle2.png" alt="">
-                <img src="/images/vlur-circle2.png" alt="">
-                <img src="/images/vlur-circle2.png" alt="">
-                <img src="/images/vlur-circle2.png" alt="">
-                <img src="/images/vlur-circle2.png" alt="">
-                <img src="/images/vlur-circle2.png" alt="">
-                <img src="/images/vlur-circle2.png" alt="">
-              </div> -->
         </section>
         <!-- home section end -->
         <!-- about section start -->
@@ -179,45 +167,28 @@
             </div>
         </section>
         <!-- services section end -->
-        <!-- skills section start -->
-        <!-- <section id="skills" class="skills-section">
-            <h1 class="text-center text-white">Skills</h1>
-            <div class="container">
-                <div class="row">
-                    <div class="logo col-lg-3 col-md-3 col-sm-6"><img class="img-fluid" src="/logos/adobe-illustrator__1_-removebg-preview (1).png" alt="" style="width: 11vw;"></div>
-                    <div class="logo col-lg-3 col-md-3 col-sm-6"><img class="img-fluid"  src="/logos/js-removebg-preview.png" alt="" style="width: 12vw;"></div>
-                    <div class="logo col-lg-3 col-md-3 col-sm-6"><img class="img-fluid "  src="/logos/premire pro (1).png" alt="" style="width: 11vw;"></div>
-                    <div class="logo col-lg-3 col-md-3 col-sm-6"><img class="img-fluid " src="/logos/animation-1 (1).png" alt="" style="width: 11vw;"></div>
-                </div>
-            </div>
-        </section> -->
-        <!-- skills section end -->
         <!-- portfolio section start -->
         <section id="portfolio" class="portfolio-sec pt-5">
             <h1 class="text-center text-white">Portfolio</h1>
-            <div class="container mt-5">
-                <div class="row project-row"  data-aos="fade-up">
-                    <div class="projects col-lg-4 col-md-6 col-sm-12" >
+            <div class="port d-grid">
+                    <div class="projects" >
                         <img class="img-fluid w-100" src="/portfolio/Capture1(2).PNG" alt="">
                     </div>
-                    <div class="projects col-lg-4 col-md-6 col-sm-12" >
+                    <div class="projects" >
                         <img class="img-fluid w-100" src="/portfolio/Capture2(2).PNG" alt="" >
                     </div>
-                    <div class="projects col-lg-4 col-md-6 col-sm-12 pb-5">
+                    <div class="projects">
                         <img class="img-fluid w-100" src="/portfolio/Capture3(3).PNG" alt="" >
                     </div>
-                </div>
-                <div class="row project-row" data-aos="fade-up">
-                    <div class="project col-lg-4 col-md-6 col-sm-12">
+                    <div class="project">
                         <img class="img-fluid w-100" src="/images/writing on face2.jpg" alt="">
                     </div>
-                    <div class="project col-lg-4 col-md-6 col-sm-12">
+                    <div class="project">
                         <img class="img-fluid w-100" src="/images/fish in water.jpg" alt="" >
                     </div>
-                    <div class="project col-lg-4 col-md-6 col-sm-12">
+                    <div class="project">
                         <img class="img-fluid w-100" src="/images/circle.jpg" alt="">
                     </div>
-                </div>
             </div>
         </section>
         <!-- portfolio section end -->
