--- a/index.html
+++ b/index.html
@@ -167,6 +167,36 @@
             </div>
         </section>
         <!-- services section end -->
+        <!-- previous section start -->
+        <section id="sample" class="sample-sec">
+            <h1 class="text-center text-white pt-5">My Previous Works</h1>
+            <div class="container previous-work d-grid pb-5 pt-5">
+                <div class="card2" data-tilt="" style="width: 18rem;" data-aos="fade-up">
+                    <img src="/images/104. mask-baby.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title text-center mt-2 text-white">Graphics Design</h5>
+                        <p class="card-text text-center p-3 text-white">I have done web design as well as graphics design. Locally I have worked as a graphic designer in a few companies and have been able to produce good output.
+                        </p>
+                    </div>
+                </div>
+                <div class="card2" data-tilt="" style="width: 18rem;" data-aos="fade-up">
+                    <img src="/images/Video-editing-software.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title text-center mt-2 text-white">Video Editing</h5>
+                        <p class="card-text text-center p-3 text-white">I have done web design as well as graphics design. Locally I have worked as a graphic designer in a few companies and have been able to produce good output.
+                        </p>
+                    </div>
+                </div>
+                <div class="card2" data-tilt="" style="width: 18rem;" data-aos="fade-up">
+                    <img src="/portfolio/Capture3(3).PNG" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title text-center mt-2 text-white">Web Design</h5>
+                        <p class="card-text text-center p-3 text-white">I have done web design as well as graphics design. Locally I have worked as a graphic designer in a few companies and have been able to produce good output.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- portfolio section start -->
         <section id="portfolio" class="portfolio-sec pt-5">
             <h1 class="text-center text-white">Portfolio</h1>
@@ -192,61 +222,25 @@
             </div>
         </section>
         <!-- portfolio section end -->
-        <!-- previous section start -->
-        <section id="sample" class="sample-sec">
-            <h1 class="text-center text-white pt-5">My Previous Works</h1>
-            <div class="container previous-work d-grid pb-5 pt-5">
-              <div class="card2" data-tilt="" style="width: 18rem;" data-aos="fade-up">
-                    <img src="/images/104. mask-baby.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title text-center mt-2 text-white">Graphics Design</h5>
-                      <p class="card-text text-center p-3 text-white">I have done web design as well as graphics design. Locally I have worked as a graphic designer in a few companies and have been able to produce good output.
-                        </p>
-                    </div>
-                </div>
-                <div class="card2" data-tilt="" style="width: 18rem;" data-aos="fade-up">
-                    <img src="/images/Video-editing-software.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title text-center mt-2 text-white">Video Editing</h5>
-                      <p class="card-text text-center p-3 text-white">I have done web design as well as graphics design. Locally I have worked as a graphic designer in a few companies and have been able to produce good output.
-                    </p>
-                    </div>
-                </div>
-                <div class="card2" data-tilt="" style="width: 18rem;" data-aos="fade-up">
-                    <img src="/portfolio/Capture3(3).PNG" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title text-center mt-2 text-white">Web Design</h5>
-                      <p class="card-text text-center p-3 text-white">I have done web design as well as graphics design. Locally I have worked as a graphic designer in a few companies and have been able to produce good output.
-                        </p>
+         <!-- contact section start -->
+        <section class="contact-section">
+            <div class="container">
+                <div class="form">
+                    <h3 class="text-white text-center">Contact Form</h3>
+                    <div class="mb-3">
+                        <label for="exampleFormControlInput1" class="form-label text-white"> Name</label>
+                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Enter Your Name">
+                      </div>
+                      <div class="mb-3">
+                        <label for="exampleFormControlTextarea1" class="form-label text-white">Write Your Massages</label>
+                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                      </div>
+                      <div>
+                        <button type="button" class="btn text-white bg-info">Send</button>
+                      </div>
                     </div>
                 </div>
             </div>
-        </section>
-        <!-- contact section start -->
-        <section id="contact" class="contact-section">
-            <div class="color"></div>
-            <div class="color"></div>
-            <div class="color"></div>
-                <div class="container-form">
-                    <div class="form">
-                        <div class="mb-3">
-                            <h4 class="text-center">Contact Form</h4>
-                            <label for="exampleFormControlInput1" class="form-label"></label>
-                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Enter Your name">
-                        </div>
-                        <div class="mb-3">
-                            <label for="exampleFormControlInput1" class="form-label"></label>
-                            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Enter Your Email">
-                        </div>
-                        <div class="mb-3">
-                            <label for="exampleFormControlTextarea1" class="form-label"></label>
-                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Enter Your massages"></textarea>
-                        </div>
-                        <div class="col-auto">
-                            <button type="submit" class="btn btn-info mb-3">Send</button>
-                        </div>
-                    </div>
-                </div>
         </section>
     </main>
    
