--- a/index.html
+++ b/index.html
@@ -223,8 +223,8 @@
         </section>
         <!-- portfolio section end -->
          <!-- contact section start -->
-        <section class="contact-section">
-            <div class="container">
+        <section id="contact" class="contact-section">
+            <div class="container form-section pb-5">
                 <div class="form">
                     <h3 class="text-white text-center">Contact Form</h3>
                     <div class="mb-3">
