--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
         </section>
         <!-- portfolio section end -->
          <!-- contact section start -->
-        <section id="contact" class="contact-section">
+        <section id="contact" class="contact-section pb-5 pt-5">
             <div class="container form-section pb-5">
                 <div class="form">
                     <h3 class="text-white text-center">Contact Form</h3>
