twenty one commit

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main>
         <nav class="navbar navbar-expand-lg fixed-top">
             <div class="container">
-                <a class="navbar-brand" href="#"><img src="/logo/104.logo-rgb-final.png" alt="" style="width: 5vw;"></a>
+                <a class="navbar-brand" href="#"><img src="/logo/104.logo-rgb-final.png" alt="" style="width: 4vw;"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -31,13 +31,13 @@
                             <a class="nav-link" href="#services">Services</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="#sample">Samples</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="#skills">Skills</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#portfolio">Portfolio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#sample">Samples</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#contact">Contact</a>
@@ -70,7 +70,7 @@
                             <h4 class="text-white">Hello</h4><h5 class="text-white">I am</h5> <h1 class="">Lily Chakma</h1>
                             <span class="text-white">A graphic designer. But apart from graphics design I work in web site design, animation, audio-video editing etc sectors. I prioritize honesty and punctuality in my work.</span>
                             <div class=" hire-me" data-aos="fade-up">
-                                <a class=" btn rounded-pill text-dark fs-5 bg-white" href="">Hire me</a>
+                                <a class=" btn rounded-pill text-dark fs-5 bg-white mt-5" href="">Hire me</a>
                             </div>
                         </div>
                         
@@ -157,8 +157,8 @@
                                     <button class="button1">Hover me</button>
                                 </div>
                                 <div class="back-5">
-                                    <h3 class="text-center text-dark">Audio Editing</h3>
-                                    <p class="text-center text-dark">Apart from video editing I also do audio editing. I have successfully completed several audio editing projects.</p>
+                                    <h3 class="text-center text-white">Audio Editing</h3>
+                                    <p class="text-center text-white">Apart from video editing I also do audio editing. I have successfully completed several audio editing projects.</p>
                                 </div>
                             </div>
                         </div>
@@ -202,13 +202,13 @@
             <h1 class="text-center text-white">Portfolio</h1>
             <div class="port d-grid">
                     <div class="projects" >
-                        <img class="img-fluid w-100" src="/portfolio/Capture1(2).PNG" alt="">
+                        <img class="img-fluid w-100" src="/images/glob.jpg" alt="">
                     </div>
                     <div class="projects" >
                         <img class="img-fluid w-100" src="/portfolio/Capture2(2).PNG" alt="" >
                     </div>
                     <div class="projects">
-                        <img class="img-fluid w-100" src="/portfolio/Capture3(3).PNG" alt="" >
+                        <img class="img-fluid w-100" src="/images/104. Hot-tea-cup.jpg" alt="" >
                     </div>
                     <div class="project">
                         <img class="img-fluid w-100" src="/images/writing on face2.jpg" alt="">
